# kftpgrabber

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  README  Roadmap  TODO  config-kftpgrabber.h.cmake  kftpgrabber_0.8.99~svn1044538.tar.gz.delta  kftpgrabber_0.8.99~svn1044538.tar.gz.id  kftpgrabber_0.8.99~svn1214766.orig.tar.gz.delta  kftpgrabber_0.8.99~svn1214766.orig.tar.gz.id
cmake/modules/: FindLibSSH2.cmake
debian/: changelog  control  copyright  kftpgrabber.install  kftpgrabber.lintian-overrides  rules  watch
debian/lintian/: kftpgrabber
debian/patches/: 11_encoding.diff  series
src/: CMakeLists.txt  Messages.sh  checksumverifier.cpp  checksumverifier.h  directoryscanner.cpp  directoryscanner.h  fileexistsactions.cpp  fileexistsactions.h  kftpbookmarks.cpp  kftpbookmarks.h  kftpgrabber.desktop  kftpgrabberui.rc  kftpqueue.cpp  kftpqueue.h  kftpqueueconverter.cpp  kftpqueueconverter.h  kftpqueueprocessor.cpp  kftpqueueprocessor.h  kftpsession.cpp  kftpsession.h  kftptransfer.cpp  kftptransfer.h  kftptransferdir.cpp  kftptransferdir.h  kftptransferfile.cpp  kftptransferfile.h  main.cpp  mainwindow.cpp  mainwindow.h  queuegroup.cpp  queuegroup.h  queueobject.cpp  queueobject.h  site.cpp  site.h  statistics.cpp  statistics.h
src/engine/: CMakeLists.txt  cache.cpp  cache.h  commands.cpp  commands.h  connectionretry.cpp  connectionretry.h  directorylisting.cpp  directorylisting.h  event.cpp  event.h  ftpdirectoryparser.cpp  ftpdirectoryparser.h  ftpsocket.cpp  ftpsocket.h  otpgenerator.cpp  otpgenerator.h  settings.cpp  settings.h  sftpsocket.cpp  sftpsocket.h  socket.cpp  socket.h  speedlimiter.cpp  speedlimiter.h  thread.cpp  thread.h
src/misc/: CMakeLists.txt  certificatestore.cpp  certificatestore.h  config.kcfgc  configbase.cpp  configbase.h  filter.cpp  filter.h  filterwidgethandler.cpp  filterwidgethandler.h  kftpgrabber.kcfg  pluginmanager.cpp  pluginmanager.h  wallet.cpp  wallet.h  zeroconf.cpp  zeroconf.h
src/misc/customcommands/: CMakeLists.txt  commands.xml  entry.cpp  entry.h  handlers.cpp  handlers.h  manager.cpp  manager.h  parameterentrydialog.cpp  parameterentrydialog.h  responsedialog.cpp  responsedialog.h
src/misc/interfaces/: CMakeLists.txt  kftpbookmarkimportplugin.cpp  kftpbookmarkimportplugin.desktop  kftpbookmarkimportplugin.h  kftpinterfaces_export.h
src/misc/plugins/: CMakeLists.txt
src/misc/plugins/bookmarkimport/: CMakeLists.txt
src/misc/plugins/bookmarkimport/filezilla3/: CMakeLists.txt  kftpimportfz3plugin.cpp  kftpimportfz3plugin.h  kftpimportplugin_filezilla3.desktop
src/misc/plugins/bookmarkimport/gftp/: CMakeLists.txt  kftpimportgftpplugin.cpp  kftpimportgftpplugin.h  kftpimportplugin_gftp.desktop
src/misc/plugins/bookmarkimport/kftp/: CMakeLists.txt  kftpimportkftpplugin.cpp  kftpimportkftpplugin.h  kftpimportplugin_kftp.desktop
src/misc/plugins/bookmarkimport/ncftp/: CMakeLists.txt  kftpimportncftpplugin.cpp  kftpimportncftpplugin.h  kftpimportplugin_ncftp.desktop
src/ui/: CMakeLists.txt  checksum_verifier.ui  config_display.ui  config_filters.ui  config_general.ui  config_log.ui  config_transfers.ui  foobar.cpp  foobar.h  kftpbookmarkimportlayout.ui  kftpfilteraddpatternlayout.ui  kftpqueueeditorlayout.ui  kftpsearchlayout.ui  quickconnect.ui
src/widgets/: CMakeLists.txt  configdialog.cpp  configdialog.h  configfilter.cpp  configfilter.h  filtereditor.cpp  filtereditor.h  fingerprintverifydialog.cpp  fingerprintverifydialog.h  fingerprintverifydialog.ui  kftpfilteraddpatternlayout.cpp  kftpfiltereditorlayout.cpp  kftpselectserverdialog.cpp  kftpselectserverdialog.h  kftpserverlineedit.cpp  kftpserverlineedit.h  listview.cpp  listview.h  listviewitem.cpp  listviewitem.h  logview.cpp  logview.h  overlaywidget.cpp  overlaywidget.h  popupmessage.cpp  popupmessage.h  searchdialog.cpp  searchdialog.h  sslerrorsdialog.cpp  sslerrorsdialog.h  sslerrorsdialog.ui  systemtray.cpp  systemtray.h  trafficgraph.cpp  trafficgraph.h  verifier.cpp  verifier.h  widgetlister.cpp  widgetlister.h  zeroconflistview.cpp  (+1 more)
src/widgets/bookmarks/: CMakeLists.txt  editor.cpp  editor.h  editor.ui  importwizard.cpp  importwizard.h  model.cpp  model.h  sidebar.cpp  sidebar.h  treeview.cpp  treeview.h
src/widgets/browser/: CMakeLists.txt  actions.cpp  actions.h  detailsview.cpp  detailsview.h  dirlister.cpp  dirlister.h  dirmodel.cpp  dirmodel.h  dirsortfilterproxymodel.cpp  dirsortfilterproxymodel.h  filterwidget.cpp  filterwidget.h  locationnavigator.cpp  locationnavigator.h  propsplugin.cpp  propsplugin.h  treeview.cpp  treeview.h  view.cpp  view.h
src/widgets/failedtransfers/: CMakeLists.txt  model.cpp  model.h  view.cpp  view.h
src/widgets/queueview/: CMakeLists.txt  delegate.cpp  delegate.h  model.cpp  model.h  queueeditor.cpp  queueeditor.h  queueview.cpp  queueview.h  threadview.cpp  threadview.h  treeview.cpp  treeview.h
